# pungy

./: README.md  pyproject.toml
pungy/: database.py  get_metadata.py  server.py
pungy/static/: index.html
pungy/static/css/: style.css
pungy/static/js/: script.js
static/css/: style.css
