[tool.poetry]
name = "music-server"
version = "0.1.0"
description = "A simple mp3 music server/player through http"
authors = ["Abulafia"]
license = "MIT"
readme = "README.md"
packages = [{include = "music_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
mutagen = "^1.46.0"
uvicorn = "^0.20.0"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
