[tool.poetry]
name = "pungy"
version = "0.1.0"
description = "A simple mp3 music server/player through http"
authors = ["Abulafia"]
license = "MIT"
readme = "README.md"
packages = [{include = "pungy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
mutagen = "^1.46.0"
uvicorn = "^0.20.0"
typer = "^0.7.0"
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
